Aligned elements and fixed styling issues

--- a/ClientFront/src/app/app.component.scss
+++ b/ClientFront/src/app/app.component.scss
@@ -21,10 +21,23 @@ h6 {
   margin: 8px 0;
 }
 
+#app-title {
+  font-weight: bold;
+}
+
 .pro-navbar #app-menu-title-btn h5 {
   color: white;
 }
 
+#app-toolbar {
+  padding: 0 60px;
+}
+
+button {
+  padding: 5px;
+  height: 40px;
+  border: none;
+}
 
 p {
   margin: 0;
@@ -243,32 +256,32 @@ footer a {
   align-items: center;
 }
 
-.github-star-badge {
-  color: #24292e;
-  display: flex;
-  align-items: center;
-  font-size: 12px;
-  padding: 3px 10px;
-  border: 1px solid rgba(27, 31, 35, 0.2);
-  border-radius: 3px;
-  background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
-  margin-left: 4px;
-  font-weight: 600;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-}
+// .github-star-badge {
+//   color: #24292e;
+//   display: flex;
+//   align-items: center;
+//   font-size: 12px;
+//   padding: 3px 10px;
+//   border: 1px solid rgba(27, 31, 35, 0.2);
+//   border-radius: 3px;
+//   background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
+//   margin-left: 4px;
+//   font-weight: 600;
+//   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+//     sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+// }
 
-.github-star-badge:hover {
-  background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
-  border-color: rgba(27, 31, 35, 0.35);
-  background-position: -0.5em;
-}
+// .github-star-badge:hover {
+//   background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
+//   border-color: rgba(27, 31, 35, 0.35);
+//   background-position: -0.5em;
+// }
 
-.github-star-badge .material-icons {
-  height: 16px;
-  width: 16px;
-  margin-right: 4px;
-}
+// .github-star-badge .material-icons {
+//   height: 16px;
+//   width: 16px;
+//   margin-right: 4px;
+// }
 
 svg#clouds {
   position: fixed;
@@ -277,7 +290,6 @@ svg#clouds {
   z-index: -10;
   width: 1920px;
 }
-
 
 .pro-navbar {
   background-color: #087747 !important;
@@ -329,4 +341,12 @@ mat-toolbar {
   justify-content: space-between;
   align-items: center;
   background-color: white !important;
+}
+
+#user-icon mat-icon {
+  font-size: 35px;
+}
+
+#dropdownButton {
+  margin-right: 45px;
 }
